--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>js Handson 3</title>
 </head>
 <body>
-  <center> <h1>  HANDSON 3</h1></center> 
+  <center> <h1> Promise Async Await</h1></center> 
         <p>Q.1 Write one example explaining how you can write a callback function.</p>
        <pre>→ A JavaScript callback is a function which is to be executed after another function has finished execution.
         Example:function myDisplayer(some) {
